services/vault/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-cache
  template:
    metadata:
      labels:
        app: nginx-cache
    spec:
      containers:
        - name: nginx-cache
          image: iangelo/nginx:1.16
          ports:
            - containerPort: 80
            - containerPort: 443
            # - containerPort: 443
            #   protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cache
spec:
  selector:
    app: nginx-cache
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
    - name: https
      port: 9443
      targetPort: 443
      protocol: TCP
    # - name: https-udp
    #   port: 9443
    #   targetPort: 443
    #   protocol: UDP
  type: ClusterIP
