services/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vault
  annotations: 
    # TODO: Have mTLS between ingress and vault
    #     + Then the ingress.yaml files can be merged into ../networking/
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vault.localhost
    secretName: nginx-cache-tls
  rules:
  - host: vault.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
